--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,9 @@ rvm:
   - 1.9.3
 # uncomment this line if your project needs to run something other than `rake`:
 script: bundle exec rspec spec
+
+before_script:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+  - "mysql -e 'create database to_do_test;'"
+  - "rake db:test:load --trace"
