--- a/config/database.yml
+++ b/config/database.yml
@@ -1,25 +1,28 @@
+# SQLite version 3.x
+#   gem install sqlite3
+#
+#   Ensure the SQLite 3 gem is defined in your Gemfile
+#   gem 'sqlite3'
 development:
-  adapter: mysql
-  database: todo_list_dev
+  adapter: sqlite3
+  database: db/development.sqlite3
   pool: 5
   timeout: 5000
-  host: 127.0.0.1
 
+# Warning: The database defined as "test" will be erased and
+# re-generated from your development database when you run "rake".
+# Do not set this db to the same as development or production.
 test: &test
-  adapter: mysql
-  database: todo_list_test
-  username: root
-  encoding: utf8
-  host: 127.0.0.1
+  adapter: sqlite3
+  database: db/test.sqlite3
   pool: 5
   timeout: 5000
 
 production:
-  adapter: mysql
-  database: todo_list
-  pool: 5
-  timeout: 5000
-  host: 127.0.0.1
+  encoding: unicode
+  adapter: postgresql
+  username: evsyukovmv
+  database: tlist
 
 cucumber:
   <<: *test
